fix traits toggler on mobile

--- a/components/FilterOptions/Traits/Fox/FoxTraitsOptions.module.css
+++ b/components/FilterOptions/Traits/Fox/FoxTraitsOptions.module.css
@@ -1,7 +1,7 @@
 .categoryButtons {
   margin: 1rem auto 0 auto;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -13,4 +13,10 @@
 
 .selectedButton {
   background-color: var(--orange) !important;
+}
+
+@media only screen and (min-width: 768px) {
+  .categoryButtons {
+    flex-direction: row;
+  }
 }
